@@ -3,5 +3,5 @@ module OAuth
   PARAMETERS = %w(oauth_consumer_key oauth_token oauth_signature_method oauth_timestamp oauth_nonce oauth_version oauth_signature)
 
   # reserved character regexp, per section 5.1
-  RESERVED_CHARACTERS = /[^\w\d\-\.\_\~]/
+  RESERVED_CHARACTERS = /[^a-zA-Z0-9\-\.\_\~]/
 end
